--- a/assets/less/bootstrap/mixins.less
+++ b/assets/less/bootstrap/mixins.less
@@ -924,3 +924,9 @@
     height: auto;
   }
 }
+
+// Ryan Misc //
+
+.voice-table-heading h2 {
+	font-size: 10px;
+}
